<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF9CF"
    tools:context=".MainFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/구입날짜"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/st_dated"
        app:layout_constraintEnd_toStartOf="@+id/st_dated"
        app:layout_constraintTop_toTopOf="@+id/st_dated" />

    <EditText
        android:id="@+id/bikeName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:background="#32B193E6"
        android:gravity="center"
        android:hint="@string/버그만"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#703BE1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/애칭"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/st_dated"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#32B193E6"
        android:gravity="center"
        android:hint="@string/_2000_01_01"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="date|text"
        android:textAlignment="center"
        android:textColor="#703BE1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="#32E1DF52"
        android:fadingEdge="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note" />

    <EditText
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="#32B193E6"
        android:hint="@string/_0000000"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="date"
        android:textAlignment="viewEnd"
        android:textColor="#703BE1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/repair_date"
        app:layout_constraintStart_toEndOf="@+id/repair_date"
        app:layout_constraintTop_toTopOf="@+id/repair_date" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="#32B193E6"
        android:gravity="center"
        android:hint="@string/_0000000"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="date"
        android:textAlignment="viewEnd"
        android:textColor="#703BE1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="#32B193E6"
        android:gravity="center"
        android:text="@string/원"
        android:textColor="#0B6380"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/repair_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/repair_date" />

    <EditText
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="#32B193E6"
        android:gravity="center"
        android:hint="@string/기타수리내용"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="textPersonName"
        android:textColor="#703BE1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="#32B193E6"
        android:gravity="center"
        android:text="@string/km"
        android:textColor="#0B6380"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/km"
        app:layout_constraintStart_toEndOf="@+id/km"
        app:layout_constraintTop_toTopOf="@+id/km" />

    <TextView
        android:id="@+id/spinner_content"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="2dp"
        android:background="#FEF9CF"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/금액"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/amount"
        app:layout_constraintEnd_toStartOf="@+id/amount"
        app:layout_constraintTop_toTopOf="@+id/amount" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/주행거리"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="#32B193E6"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/수리날짜"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bikeName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/기타"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repair_date" />

    <EditText
        android:id="@+id/repair_date"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="#32B193E6"
        android:gravity="center"
        android:hint="@string/_2000_01_01"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="date|text"
        android:textColor="#703BE1"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="43dp"
        android:gravity="center"
        android:text="@string/참고"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/reference"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center|top"
        android:text="@string/reference"
        android:textColor="#0B6380"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="#32B193E6"
        android:text="@string/저장"
        android:textColor="#703BE1"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:background="#32E1DF52"
        android:gravity="center_vertical"
        android:hint="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="#0B6380"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:background="#32E1DF52"
        android:gravity="center"
        android:text="@string/합계"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalAmount"
        app:layout_constraintEnd_toStartOf="@+id/totalAmount"
        app:layout_constraintTop_toTopOf="@+id/totalAmount" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#F7F3B5"
        android:gravity="center"
        android:text="@string/원"
        android:textAlignment="center"
        android:textColor="#0B6380"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>